added cmake support for linux

--- a/qtpropertybrowser/shiboken/CMakeLists.txt
+++ b/qtpropertybrowser/shiboken/CMakeLists.txt
@@ -109,23 +109,25 @@ endif()
 # Include Flags
 target_include_directories(qtpropertybrowserpy PRIVATE ../src)
 target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include)
-target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include/QtCore)
-target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include/QtGui)
 target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include/QtWidgets)
+target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include/QtGui)
+target_include_directories(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/include/QtCore)
 target_include_directories(qtpropertybrowserpy PRIVATE ${shiboken_include_dir})
 target_include_directories(qtpropertybrowserpy PRIVATE ${PYTHON_INC})
+target_include_directories(qtpropertybrowserpy PRIVATE ${Qt5Widgets_INCLUDE_DIRS})
 
 # Link Flags
+target_link_libraries(qtpropertybrowserpy PRIVATE qtpropertybrowser::qtpropertybrowser)
+target_link_libraries(qtpropertybrowserpy PRIVATE ${shiboken_shared_libraries})
+target_link_libraries(qtpropertybrowserpy PRIVATE Qt5::Widgets)
 if(WIN32)
-    message(!!!Todo: Import shiboken.dll!!!)
+    target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/pyside2.cp36-win_amd64.dll)
 elseif(APPLE)
-    target_link_libraries(qtpropertybrowserpy PRIVATE qtpropertybrowser::qtpropertybrowser)
-    target_link_libraries(qtpropertybrowserpy PRIVATE ${shiboken_shared_libraries})
-    target_link_libraries(qtpropertybrowserpy PRIVATE Qt5::Widgets)
+    target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/shiboken2.cpython-36m-darwin.5.12.dylib)
     set_target_properties(qtpropertybrowserpy PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
 else()
-    message(!!!Todo: Import shiboken.so!!!)
-endif()
+    target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/libpyside2.cpython-36m-x86_64-linux-gnu.so.5.12)
+endif() 
 
 # Install
 install (TARGETS qtpropertybrowserpy DESTINATION lib)
