Added CMake support for macOS

--- a/qtpropertybrowser/shiboken/CMakeLists.txt
+++ b/qtpropertybrowser/shiboken/CMakeLists.txt
@@ -123,7 +123,7 @@ target_link_libraries(qtpropertybrowserpy PRIVATE Qt5::Widgets)
 if(WIN32)
     target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/pyside2.cp36-win_amd64.dll)
 elseif(APPLE)
-    target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/shiboken2.cpython-36m-darwin.5.12.dylib)
+    target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/libpyside2.cpython-36m-darwin.5.12.dylib)
     set_target_properties(qtpropertybrowserpy PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
 else()
     target_link_libraries(qtpropertybrowserpy PRIVATE ${SP_DIR}/PySide2/libpyside2.cpython-36m-x86_64-linux-gnu.so.5.12)
